package it.polimi.ingsw.VirtualModel;

public interface VirtualModelObserver {
    void update();
}
